[package]
name = "bdstorage"
version = "1.0.1"
edition = "2024"
description = "A speed-first local data deduplication engine using tiered BLAKE3 hashing."
license = "Apache-2.0"
authors = ["Rakshat28"]
repository = "https://github.com/Rakshat28/bdstorage"
readme = "README.md"
keywords = ["deduplication", "storage", "nvme", "blake3"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "bdstorage"
path = "src/main.rs"

[dependencies]
anyhow = "1"
blake3 = "1"
bincode = "1"
clap = { version = "4", features = ["derive", "env"] }
colored = "2"
ctrlc = "3"
crossbeam = "0.8"
filetime = "0.2"
indicatif = "0.17"
jwalk = "0.8"
libc = "0.2"
nix = { version = "0.27", features = ["ioctl"], optional = true }
rayon = "1"
redb = "2"
reflink = "0.1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
serde_json = "1.0.149"
[target.'cfg(not(windows))'.dependencies]
nix = { version = "0.27", features = ["ioctl"] }
xattr = "1"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"
walkdir = "2"
serde_json = "1"
